2004-02-17  Zoltan Varga  <vargaz@freemail.hu>

	* inssel.brg inssel-x86.brg: Move call(immediate) rules to the platform
	independent file.

2004-02-16  Zoltan Varga  <vargaz@freemail.hu>

	* tramp-ppc.c (mono_arch_create_jump_trampoline): Fix compilation on
	PPC.

	* mini-x86.c: Call mono_arch_get_lmf_addr instead of mono_get_lmf_addr
	if we have a working __thread implementation.

	* mini-ops.h cpu-pentium.md mini-x86.c inssel-x86.brg: Remove 
	OP_CALL_IMM opcodes, since the CALL opcodes handles immediates as well.

2004-02-15  Zoltan Varga  <vargaz@freemail.hu>

	* mini-x86.c: Fix compilation under gcc 2.
	
2004-02-14  Zoltan Varga  <vargaz@freemail.hu>

	* mini.c (mono_codegen): Avoid infinite loop when an icall wrapper
	contains a call to the wrapped function.

	* mini-ops.h cpu-pentium.md mini-x86.c inssel-x86.brg: Add 
	OP_<CALL>_IMM opcodes, and use them under X86.
	
	* mini.c (mono_jit_find_compiled_method): Fix warning.

	* cpu-pentium.md: Fix length of opcodes which use x86_alu_membase_imm.

	* jit-icalls.c (mono_ldftn_nosync): New JIT icall.

	* tramp-x86.c (mono_arch_create_jump_trampoline): Move arch independent
	functionality to mini.c.

	* mini.c (mono_create_jump_trampoline): New function to create a jump
	trampoline. Return a compiled method instead of a trampoline if it
	exists. Add a cache for jump trampolines.

	* mini.c (mono_jit_find_compiled_method): New function to return a
	compiled method if it exists.

	* mini-x86.c: Call mono_create_jump_trampoline instead of 
	mono_arch_create_jit_trampoline.

	* jit-icalls.c (mono_ldftn): Do not compile the method. Instead, return
	a jump trampoline. Fixes #52092.
	
2004-02-11  Zoltan Varga  <vargaz@freemail.hu>

	* debug-mini.c (mono_init_debugger): Remove call to mono_verify_corlib,
	which is not up-to-date. Add check_corlib_version () instead.

	* mini.c (mini_init): Call mono_thread_attach () so embedders do not 
	have to call it.
	