@@ -1,3 +1,13 @@
+
+Tue Feb 17 21:41:20 CET 2004 Paolo Molaro <lupus@ximian.com>
+
+	* aot.c, mini-x86.c, mini.c: use the code manager instead of a mempool to hold native
+	code.
+	* mini-ppc.c: handle calls outside of the allowed range with thunks
+	allocated using the code manager.
+	* tramp-ppc.c: use the code manager to hold generated native code.
+	Fixed the magic trampoline to just patch vtable entries.
+
 2004-02-17  Zoltan Varga  <vargaz@freemail.hu>
 
 	* inssel.brg inssel-x86.brg: Move call(immediate) rules to the platform
